# omak

./: .gitignore  Cargo.toml  README.md
resources/shaders/: basic.shader  sprite.shader
src/: game_panel.rs  lib.rs  winit_panel.rs
src/panels/: common.rs  glfw_panel.rs  mod.rs  winit_panel.rs
src/renderer/: gl_objects.rs  mod.rs  shader.rs  texture.rs  utils.rs
